Lesson-5/service_port3000.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: redmine-svc 
spec: 
  ports: 
  - port: 80 
    targetPort: 3000 
  selector: 
    app: my-redmine
  type: ClusterIP
