Lesson-5/service_port5432.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: database-svc
spec: 
  ports: 
  - port: 5432 
    targetPort: 5432 
  selector: 
    app: my-db 
  type: ClusterIP
