Lesson-5/ingress_networking.k8s.io.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: my-ingress 
spec: 
  rules:
  - host: my-host.local
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: redmine-svc
            port:
              number: 80
